Updated pages.json file.  Also fixed home page so the scrollable list starts at the top and does not cut off the first value.

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,6 @@ hr {
     margin: 5%; /* Add margin around the insideContainer */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     overflow-y: auto; /* Enable vertical scrolling */
 }
